changed wasm preview, fixed zidnex order, fixed app home alignment, added close button to about page

--- a/src/style/mainStyle.css
+++ b/src/style/mainStyle.css
@@ -491,3 +491,21 @@ cube:after {
         transform: scale(1, 1)
     }
 }
+
+#closeButton{
+        /*transition: opacity 0.2s;*/
+    display: none;
+    width: 48px;
+    height: 48px;
+    border-radius: 24px;
+    position: absolute;
+    left: 50%;
+    bottom: 128px;
+    transform: translate(-50%);
+    background-color: #5553;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 36px;
+    z-index: 3; /*there's a lot going on with zIndex, needs tracing how this happened*/
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path fill="white" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>');
+}
